--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
+  min-height: 100vh;
+  background-color: rgb(211, 254, 255);
+  font-family: 'Times New Roman', Times, serif;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  text-align: center;
+  background-color: rgb(180, 255, 214);
+  color: black;
+  font-size:x-large;
+  margin: none;
+  border-radius: none;
+  padding: 10%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  color: black;
+  padding: 20px 60px;
+  text-decoration: none;
+  font-size: large;
+  border: none;
+  margin: 5%;
+  background-color: rgb(183,255,207);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button:hover {
+  background-color: rgb(0,141,141);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Topright {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  font-size:18px;
 }
