--- a/src/Pages/SignInPage/SignInPage.css
+++ b/src/Pages/SignInPage/SignInPage.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: aqua;
+  min-height: 100vh;
 }
 
 .signin-wrapper input {
@@ -13,7 +14,6 @@
   font-size: 20px;
   padding-left: 10px;
   margin: 5px;
-
 }
 
 .signin-wrapper button {
