--- a/src/Pages/AccountPage/AccountPage.css
+++ b/src/Pages/AccountPage/AccountPage.css
@@ -1,83 +1,48 @@
-.App {
-    min-height: 100vh;
-    background-color: rgb(211, 254, 255);
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  header {
-    text-align: left;
-    background-image: url(../../images/oceanimage.jpg);
-    background-blend-mode:lighten;
-    background-position: center;
-    background-size:cover;
-    opacity:1;
-    color: black;
-    font-size:x-large;
-    margin: none;
-    border-radius: none;
-    padding: 10%;
-  }
+.information {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color:aqua;
+}
 
-  h2 {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-    background-color: rgb(184, 227, 240);
-    color: black;
-    font-size:large;
-    margin: none;
-    border-radius: none;
-    padding: 1%;
-  }
-  h3 {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: justify;
-    color: black;
-    font-size:large;
-    margin: none;
-    border-radius: none;
-    padding: 1%;
-  }
+input {
+  width: 250px;
+  height: 50px;
+  font-size: 20px;
+  padding-left: 10px;
+  margin: 5px;
 
-  
-  button {
-    color: black;
-    padding: 20px 60px;
-    text-decoration: none;
-    font-size: large;
-    border: none;
-    margin: 5%;
-    background-color: rgb(102, 255, 0);
-  }
+}
 
-  .hotbar-button {
-    color: black;
-    padding: 5px 5px;
-    text-decoration: none;
-    font-size: large;
-    border: none;
-    margin: 1%;
-  }
-  .hotbar-button:hover {
-    cursor:pointer;
-  }
-  
-  button:hover {
-    background-color: rgb(0,141,141);
-    color: white;
-  }
+ button {
+  width: 320px;
+  height: 50px;
+  margin-top: 15px;
+}
 
-  .Topright {
-    position: absolute;
-    top: 30px;
-    right: 16px;
-    font-size:18px
-  }
-  
-  .Middleright {
-    position: absolute;
-    top:30px;
-    right:80px;
-  }
+ button:hover {
+  cursor: pointer;
+}
+
+.employees {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.employee {
+  width: 700px;
+  height: auto;
+  border: 1px solid black;
+  margin: 10px;
+  display: flex;
+  padding: 10px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.employee h3 {
+  margin: 20px;
+}
