--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -1,138 +1,120 @@
 .App {
-    min-height: 100vh;
-    background-color: rgb(211, 254, 255);
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    padding: 0;
+  min-height: 100vh;
+  background-color: rgb(211, 254, 255);
+  font-family: 'Times New Roman', Times, serif;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    text-align: left;
-    background-image: url(../../images/oceanimage.jpg);
-    background-blend-mode: lighten;
-    background-position: center;
-    background-size: cover;
-    opacity: 1;
-    color: black;
-    font-size: x-large;
-    margin: none;
-    border-radius: none;
-    padding: 10%;
+  text-align: left;
+  background-image: url(../../images/oceanimage.jpg);
+  background-blend-mode: lighten;
+  background-position: center;
+  background-size: cover;
+  opacity: 1;
+  color: black;
+  font-size: x-large;
+  margin: none;
+  border-radius: none;
+  padding: 10%;
 }
 
 h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-    background-color: rgb(184, 227, 240);
-    color: black;
-    font-size: large;
-    margin: none;
-    border-radius: none;
-    padding: 1%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: center;
+  background-color: rgb(184, 227, 240);
+  color: black;
+  font-size: large;
+  margin: none;
+  border-radius: none;
+  padding: 1%;
 }
 
 h3 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: justify;
-    color: black;
-    font-size: large;
-    margin: none;
-    border-radius: none;
-    padding: 1%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: justify;
+  color: black;
+  font-size: large;
+  margin: none;
+  border-radius: none;
+  padding: 1%;
 }
 
-.Frames{
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-size: large;
-    margin: 5%;
-    align-items: left;
-    text-align: center;
+.Frames {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: large;
+  margin: 5%;
+  align-items: left;
+  text-align: center;
 }
 
 .Frames button {
-    height: 100;
-    width: 100;
-    
+  height: 100;
+  width: 100;
+
 }
 
 .hotbar-button {
-    color: black;
-    padding: 5px 5px;
-    text-decoration: none;
-    font-size: large;
-    border: none;
-    margin: 1%;
+  color: black;
+  padding: 5px 5px;
+  text-decoration: none;
+  font-size: large;
+  border: none;
+  margin: 1%;
 }
 
 .hotbar-button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .Topright {
-    position: absolute;
-    top: -3px;
-    right: 16px;
-    font-size: 18px
-}
-
-.Middleright {
-    position: absolute;
-    top: -3px;
-    right: 100px;
+  position: absolute;
+  top: -3px;
+  right: 16px;
+  font-size: 18px
 }
 
 /* Add a black background color to the top navigation bar */
-.topnav {
-    overflow: hidden;
-    background-color: lightgrey;
+.searchbar {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  background-color: lightseagreen;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  width: 200px;
+  color: white;
+  right: 100px;
+  top: 0.6rem;
+}
+
+/* Style the "active" element to highlight the current page */
+.searchbar a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.searchbar input {
+  padding: 6px;
+  border: none;
+  outline: none;
+  margin: 0 0.5rem 0 0.5rem;
+  width: 100%;
+  height: 2px;
+  background-color: lightseagreen;
+  font-size: 17px;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 630px) {
+  .searchbar {
+    position: inherit;
+    border-radius: 0;
+    width: 98%;
   }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the "active" element to highlight the current page */
-  .topnav a.active {
-    background-color: #2196F3;
-    color: white;
-  }
-  
-  /* Style the search box inside the navigation bar */
-  .topnav input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px;
-  }
-  
-  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-  @media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;
-    }
-  }
+}
