--- a/src/GeneralStyles.css
+++ b/src/GeneralStyles.css
@@ -1,7 +1,7 @@
 button {
   border: none;
   margin-left: 1%;
-  background-color: rgb(102, 255, 0);
+  background-color: lightseagreen;
   border-radius: 10px;
 }
 
