--- a/src/Pages/SignInPage/SignInPage.css
+++ b/src/Pages/SignInPage/SignInPage.css
@@ -26,6 +26,7 @@ div.page-background{
   font-size: 20px;
   padding-left: 10px;
   margin: 5px;
+  border-radius: 10px;
 }
 
 .signin-wrapper button {
