--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -1,17 +1,27 @@
-.App1 {
-  min-height: 100vh;
-  background-color: rgb(211, 254, 255);
-  font-family: 'Times New Roman', Times, serif;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+div.page-background{
+  position: fixed;
+  background-image:url("../../images/oceanimagedesktop.jpg");
+  background-blend-mode: soft-light;
+  background-size: cover;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+
+.image1-panel{
+  position: relative;
+  background-color: aqua;
+  height: 90%;
+  width: 30%;
+  left: 10%;
+  top: 20%;
+  border-radius: 10px;
 }
 
 .image1{
   position: relative;
-  right: 450px;
-  top: 100px;
-  border-radius: 100px;
+  left: 6%;
+  top: 5%;
 }
 
 .panel1 {
@@ -21,14 +31,7 @@
   padding: 0;
 }
 
-.header1 {
-  min-height: 10vh;
-  background-color: aqua;
-  font-family: 'Times New Roman', Times, serif;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
+
 
 /*
 * percentage's are used to scale items according to browser resizing
@@ -36,20 +39,22 @@
 */
 .header2 {
   position: relative;
-  top: -350px;
-  left: 55%;
-  height: 500px;
+  top: -50%;
+  left: 50%;
+  height: 30%;
   width: 40%;
-  background-color: rgb(189, 207, 209);
+  background-color: rgb(211, 254, 255);
   font-family: 'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
   text-align: left;
+  border-radius: 10px;
 }
 
 .panel1 button {
   position: relative;
-  top: -350px;
-  left: 25%;
+  top: -45%;
+  left: 62%;
   width: 15%;
+  height: 5%;
 }
