--- a/src/Pages/OrderHistory/OrderHistory.css
+++ b/src/Pages/OrderHistory/OrderHistory.css
@@ -1,14 +1,39 @@
-.order-list {
-    padding: 2rem;
+.order-list {}
+
+.order-list .container {
+    display: flex;
+    flex-direction: row;
+    margin-left: 25%;
 }
 
 .order-list .tables {
     text-align: left;
-    background-color: green;
+    border-radius: 10px;
+    background-color: cadetblue;
     color: white;
     border-spacing: 10px;
+    margin-left: 10px;
 }
 
-.fa-info-circle{
+.fa-info-circle {
     color: aquamarine
+}
+
+thead button {
+    font-family: inherit;
+    font-weight: 700;
+    padding: 0.3em;
+    min-width: max-content;
+}
+
+thead button.ascending::after {
+    content: '⬇️';
+    display: inline-block;
+    margin-left: 1em;
+}
+
+thead button.descending::after {
+    content: '⬆️';
+    display: inline-block;
+    margin-left: 1em;
 }
