Fix eyesore for buttons

--- a/src/Pages/OrderHistory/OrderHistory.css
+++ b/src/Pages/OrderHistory/OrderHistory.css
@@ -32,7 +32,7 @@ thead button {
     padding: 0.3em;
     min-width: max-content;
     background-color: transparent;
-    color:aquamarine
+    color:black
 }
 
 thead button.ascending::after {
