--- a/src/Pages/ShoppingPage/ShoppingPage.css
+++ b/src/Pages/ShoppingPage/ShoppingPage.css
@@ -125,3 +125,39 @@ img.small {
   margin-left: 9px;
   border-radius: 1.5px;
 }
+
+/* Add a black background color to the top navigation bar */
+.searchbar {
+  position: inherit;
+  display: flex;
+  align-items: center;
+  background-color: lightseagreen;
+  padding: 0.5rem;
+  border: none;
+  flex-grow: 1;
+  border-radius: 0;
+  width: 99.4;
+  color: white;
+  right: 100px;
+  top: 0.6rem;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+/* Style the "active" element to highlight the current page */
+.searchbar a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.searchbar input {
+  padding: 6px;
+  border: none;
+  outline: none;
+  margin: 0 0.5rem 0 0.5rem;
+  width: 100%;
+  height: 2px;
+  background-color: lightseagreen;
+  font-size: 17px;
+}
