--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -1,7 +1,7 @@
 .product-background {
   overflow:hidden;
   position:fixed;
-  background-image:url("../../images/oceanimagedesktop.jpg");
+  background-color:antiquewhite;
   background-blend-mode: soft-light;
   background-size: cover;
   height: 100% !important;
