--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -55,3 +55,12 @@
   width: 15%;
   height: 5%;
 }
+
+.row {
+  background-color: #136079a9;
+  background-position: center;
+  margin: 10px;
+  margin-bottom: 10px;
+  max-width: 20000px;
+  height: 655px;
+}
