--- a/src/Pages/ProductPage/ProductPage.css
+++ b/src/Pages/ProductPage/ProductPage.css
@@ -23,8 +23,9 @@
   left:10%;
   top:10%;
   border-radius: 10px;
-  background-color: white;
-  
+  background-color:antiquewhite;
+  box-shadow: 0 5px 10px rgba(0.5, 0.5, 0.5, 0.5);
+  border: 1px solid black;
 }
 
 .ProductPage .container2
@@ -36,7 +37,9 @@
   top:10%;
   padding:5%;
   border-radius: 10px;
-  background-color: white;
+  background-color:antiquewhite;
+  box-shadow: 0 5px 10px rgba(0.5, 0.5, 0.5, 0.5);
+  border: 1px solid black;
 }
 /*
 * percentage's are used to scale items according to browser resizing
@@ -62,5 +65,5 @@
   margin: 10px;
   margin-bottom: 10px;
   max-width: 20000px;
-  height: 655px;
+  min-height: 655px;
 }
